# JINet

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
alembic/versions/: 322b53bd2dbc_add_a_created_timestamp_to_the_.py  404d6ec10501_add_a_status_column_to_the_.py  423bb8d38355_create_sharedata_table.py  87916e77b6ed_add_table_for_sample_data.py  a86ddc120024_add_short_description_and_logo_columns_.py  ec56daf309a6_add_a_new_login_session_table_usertoken.py
benchmarking/: coin_flips.R  matrix-inverse.py  matrix-multiply.R  plot.py  sum-list.py
benchmarking/data/: Python-matrix-inverse-wasm32.csv  Python-matrix-inverse-x86_64.csv  Python-sum-list-wasm32.csv  Python-sum-list-x86_64.csv  R-coin_flips-wasm32.csv  R-coin_flips-x86_64.csv  (+2 more)
client/: index.html
jinet/: auth.py  config.py  data.py  db.py  filesize.py  js.py  main.py  models.py  packages.py  requests.py  share.py  users.py
server/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
static/: python-runtime.js  styles.css
templates/: _layout.html  admin.html  contribute.html  data.html  index.html  me.html  package-list.html  package-new.html  package-run-R.html  package-run-python.html  package-run.html  package-validate.html  packages.html  share-response.html  share.js  shared-result.html  ui-R.js  ui-contribute.js  ui-python.js
tests/: script.py
visualization/: LR_preliminary_plots.py  PR_binary.py  PR_multiclass.py  ROC_binary.py  ROC_multiclass.py  pca_3D.py  pca_loading.py  tsne_2D.py
(+46 files in other folders)
