[tool.poetry]
name = "jinet"
version = "0.1.0"
description = ""
authors = ["Giada Lalli <giadalalli@gmail.com>", "James Collier <james@thecolliers.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.109.2"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.14"
alembic = "^1.13.1"
hypercorn = "^0.16.0"
authlib = "^1.3.0"
jinja2 = "^3.1.3"
pydantic-settings = "^2.2.0"
python-multipart = "^0.0.9"
itsdangerous = "^2.1.2"
httpx = "^0.26.0"
secweb = "^1.9.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pylint = "^3.0.3"
mypy = "^1.8.0"
pytest = "^8.0.0"

[tool.mypy]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"